--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,7 +1,23 @@
+a{
+  color: #ffffff;
+   text-decoration: none
+}
+
 main{
   min-height: 80vh;
 }
 
 h3{
   margin: 1rem 0 !important;
+}
+
+h1{
+  font-size:1.8rem;
+  padding: 1rem 0; 
+}
+
+
+h2{
+  font-size:1.4rem;
+  padding: 0.5rem 0;
 }
